--- a/src/Interactive/HostTest/InteractiveHostTest.csproj
+++ b/src/Interactive/HostTest/InteractiveHostTest.csproj
@@ -9,8 +9,8 @@
     <Platform Condition="'$(Platform)' == ''">x86</Platform>
     <ProjectGuid>{8CEE3609-A5A9-4A9B-86D7-33118F5D6B34}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Roslyn.InteractiveHost.UnitTests</RootNamespace>
-    <AssemblyName>Roslyn.InteractiveHost.UnitTests</AssemblyName>
+    <RootNamespace>Microsoft.CodeAnalysis.InteractiveHost.UnitTests</RootNamespace>
+    <AssemblyName>Microsoft.CodeAnalysis.InteractiveHost.UnitTests</AssemblyName>
     <PlatformTarget>x86</PlatformTarget>
     <SolutionDir Condition="'$(SolutionDir)' == '' OR '$(SolutionDir)' == '*Undefined*'">..\..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -101,7 +101,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
   </PropertyGroup>
   <ItemGroup>
-    <InternalsVisibleToTest Include="Roslyn.InteractiveWindow.UnitTests" />
+    <InternalsVisibleToTest Include="Microsoft.CodeAnalysis.InteractiveWindow.UnitTests" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
